--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,12 @@ img {
   font-size: 1.9em;
   margin: 0 0 30px;
 }
+@media (max-width: 980px) {
+  .section-title,
+  .section-subtitle {
+    margin: 0 20px 30px;
+  }
+}
 .section-subtitle {
   font-size: 1.7em;
 }
